@@ -1674,12 +1674,17 @@ again will stop the shadowing.
 SHAPE=SHAPE_SHIFT
 SHAPESHIFT=SHAPE_SHIFT
 SHAPE_SHIFT=<ABILITY>\
-Usage    : SHAPESHIFT\n\r\
+Usage    : SHAPESHIFT (FORM)\n\r\
 Example  : shapeshift\n\r\
+Example  : shapeshift list\n\r\
+Example  : shapeshift cub\n\r\
 Throughout his or her life, a Druid will have a particular creature which \
 he or she may change to and from at will.  By entering into this chant in \
 any shape, the druid may change to their special animal form.  The animal \
-form will progress as the Druid gains in levels.
+form will progress as the Druid gains in levels.  Entering the command again \
+allows the druid to revert to human form. A higher level druid may optionally \
+specify a lower version of their form to assume that. Use shapeshift list to \
+see all available forms.
 
 THIRD_TOTEM=SECOND_TOTEM
 FOURTH_TOTEM=SECOND_TOTEM
@@ -1689,9 +1694,10 @@ DRUID_SHAPESHIFT3=SECOND_TOTEM
 DRUID_SHAPESHIFT4=SECOND_TOTEM
 DRUID_SHAPESHIFT5=SECOND_TOTEM
 SECOND_TOTEM=<ABILITY>\
-Usage    : SHAPESHIFT [TOTEM NUMBER]\n\r\
+Usage    : SHAPESHIFT [TOTEM NUMBER]/(FORM)\n\r\
 Example  : shapeshift 2\n\r\
 Example  : shapeshift lion\n\r\
+Example  : shapeshift cub\n\r\
 Example  : shapeshift 3\n\r\
 Example  : shapeshift 4\n\r\
 As certain Druids gain in experience and skill, they may acquire new totems \
