@@ -2417,3 +2417,4 @@ ruthless programmer, and sentenced to a quick death.
 21.Players Teaching Players is now more beneficial for both.  Also, (internally), Teach is now StdMOB managed, as it should be.
 22.Potions/Pills/Scrolls/Powders now support parameters for spells on them.
 23.Scriptable: get_prog now applies to getting items from containers on the ground.
+24.Druids can now shapeshift into lower versions of their existing shapeshift forms.
